<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/login_page"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_page_login_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40sp"
        android:paddingStart="40sp"
        android:paddingTop="40sp"
        android:paddingEnd="40sp"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/login_page_login_username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="35sp"
        android:text="@string/username"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_page_login_username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:ems="10"
        android:backgroundTint="@color/button_blue_color"
        android:inputType="text" />

    <TextView
        android:id="@+id/login__page_login_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="35sp"
        android:text="@string/password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_page_login_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:ems="10"
        android:backgroundTint="@color/button_blue_color"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_page_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_page_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/app_blue"
        android:text="@string/login" />



    <TextView
        android:id="@+id/login_page_create_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/no_account"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/login_page_create_account_click_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/create_account"
        android:textColor="@color/button_blue_color"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>
</ScrollView>