<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/login_page"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup_page_signup_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40sp"
        android:layout_marginTop="20sp"
        android:paddingStart="40sp"
        android:paddingTop="40sp"
        android:paddingEnd="40sp"
        android:text="@string/sign_up"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/signup_page_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="35sp"
        android:text="@string/name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_page_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        android:backgroundTint="@color/button_blue_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signup_page_signup_username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="35sp"
        android:text="@string/username"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_page_signup_username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:ems="10"
        android:backgroundTint="@color/button_blue_color"
        android:inputType="text" />

    <TextView
        android:id="@+id/signup_page_signup_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="35sp"
        android:text="@string/password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_page_signup_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:ems="10"
        android:backgroundTint="@color/button_blue_color"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/signup_page_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/signup_page_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/app_blue"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/signup_page_existing_user_textview"
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/existing_user"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/signup_page_existing_user_click_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:textColor="@color/button_blue_color"
        android:text="@string/login"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>

</ScrollView>